--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "underscore": "latest"
   },
   "engines": {
-    "node": "4.6.x",
+    "node": "4.8.4",
     "npm": "3.10.x"
   },
   "scripts": {
